<resources>
    <string name="app_name">Book Application</string>
    <string name="publisher">Publisher</string>
    <string name="time_published">Time Published</string>
    <string name="price_book">Price Book</string>
    <string name="add">add</string>
    <string name="cancle">cancle</string>
    <string name="deleting_book">DELETING BOOK</string>
    <string name="name_book">Name Book</string>
    <string name="adding_book">ADDING BOOK</string>
    <string name="editing_book">EDITING BOOK</string>
    <string name="edit">edit</string>
    <string name="delete">DELETE</string>
</resources>